# auto-garden

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml
docs/: architecture.md  hardware.md
src/auto_garden/: __init__.py  __main__.py  cli.py  config.py  controller.py  scenarios.py  storage.py
src/auto_garden/hardware/: __init__.py  factory.py  sensor.py  valve.py
tests/: conftest.py  test_config.py  test_controller.py  test_factory.py  test_smoke.py  test_storage.py
