[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-garden"
version = "0.1.0"
description = "Automated garden watering system for Raspberry Pi using moisture sensors and a solenoid valve"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "djtarulis" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "structlog>=24.1",
]

[project.optional-dependencies]
pi = [
    "gpiozero>=2.0",
    "adafruit-blinka>=8.0",
    "adafruit-circuitpython-mcp3xxx>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML",
]

[project.scripts]
auto-garden = "auto_garden.cli:app"

[project.urls]
Homepage = "https://github.com/djtarulis/auto-garden"
Repository = "https://github.com/djtarulis/auto-garden"
Issues = "https://github.com/djtarulis/auto-garden/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_garden"]

# ---------------------------------------------------------------------------
# Ruff: linting + formatting (replaces black, flake8, isort)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = ["PLR0913"]  # too-many-arguments — fine for config-heavy code

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # magic numbers OK in tests

# ---------------------------------------------------------------------------
# mypy: static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["gpiozero.*", "adafruit_mcp3xxx.*", "board", "busio", "digitalio"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
